--- a/index.html
+++ b/index.html
@@ -56,6 +56,24 @@
 
 						<!-- One -->
 							<section id="one" class="tiles">
+								<article width=100% style="background-color:rgb(100,204,201);transition-property:none;opacity=0%;">
+									<header class="major" style="width:100%">
+										<h3>Featured Research</h3>
+									<div style="  /* Buttonish */
+									display: inline-block;
+									padding: 6px 12px 6px 30px;
+									margin: 10px 0;
+									border:rgb(255, 255, 255);
+									border-radius: 3px;
+									background: rgb(100, 204, 201) ;
+									color: #ffffff;
+									white-space: nowrap;
+									width:100%;
+									height:38vh">
+										<a class="twitter-timeline" data-theme="dark" href="https://twitter.com/wmicss/timelines/1301249959442874368?ref_src=twsrc%5Etfw" data-chrome="noheader transparent noborders nofooter" data-height=35vh data-border-color="#FFFFFF" data-dnt="true">WMICSS Highlighted Tweets</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+									</div>
+									</header>
+								</article>
 								<article>
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
@@ -85,19 +103,10 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="clim.html" class="link">Climate Change</a></h3>
-										<p>Machine Learning & AI to understand if our efforts to slow and mitigate it are helping.</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="live.html" class="link">Livelihoods</a></h3>
+										<h3><a href="live.html" class="link">Livelihoods & Climate Change</a></h3>
 										<p>Health. Income. Security. A Voice. Let's make sure everyone has them.</p>
 									</header>
 								</article>
