--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<script src="assets/js/jquery.min.js"></script>
 	</head>
 	<body class="is-preload">
 
@@ -43,10 +44,8 @@
 							</header>
 							<div class="content">
 								<p>Based out of the <a href="http://www.wm.edu">oldest public research university in the United States</a>, the ICSS is designing the future of large scale societal modeling.</p>
-								<ul class="actions">
-									<li><a href="#one" class="button fit next scrolly">Research Themes</a></li>
-									<li><a href="allprojects.html" class="button fit next">Projects & People</a></li>
-								</ul>
+								<div id="addbr"></div>
+
 							</div>
 						</div>
 					</section>
@@ -57,20 +56,22 @@
 						<!-- One -->
 							<section id="one" class="tiles">
 								<article width=100% style="background-color:rgb(100,204,201);transition-property:none;opacity=0%;">
+									<span class="image">
+										<img src="images/books.jpg" alt="" />
+									</span>
 									<header class="major" style="width:100%">
 										<h3>Featured Research</h3>
 									<div style="  /* Buttonish */
 									display: inline-block;
-									padding: 6px 12px 6px 30px;
-									margin: 10px 0;
 									border:rgb(255, 255, 255);
 									border-radius: 3px;
 									background: rgb(100, 204, 201) ;
 									color: #ffffff;
 									white-space: nowrap;
 									width:100%;
-									height:38vh">
-										<a class="twitter-timeline" data-theme="dark" href="https://twitter.com/wmicss/timelines/1301249959442874368?ref_src=twsrc%5Etfw" data-chrome="noheader transparent noborders nofooter" data-height=35vh data-border-color="#FFFFFF" data-dnt="true">WMICSS Highlighted Tweets</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+									height:80%;
+														">
+										<a class="twitter-timeline" data-theme="dark" href="https://twitter.com/wmicss/timelines/1301249959442874368?ref_src=twsrc%5Etfw" data-chrome="noheader transparent noborders nofooter" data-height=25vh data-border-color="#FFFFFF" data-dnt="true">WMICSS Highlighted Tweets</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 									</div>
 									</header>
 								</article>
@@ -156,13 +157,21 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
+
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script>
+				var div = document.getElementById('addbr');
+				if ($(window).width() >= 550) {
+					div.innerHTML += '<ul class="actions"><li><a href="#one" class="button fit next scrolly">Research Themes</a></li><li><a href="allprojects.html" class="button fit next">Projects & People</a></li></ul>';
+				} else {
+					div.innerHTML += '<ul class="actions"><li><a href="#one" class="button fit next scrolly">Research Themes</a></li></ul><ul class="actions"><li><a href="allprojects.html" class="button fit next">Projects & People</a></li></ul>';	
+				}
+			</script>
 
 	</body>
 </html>
