--- a/allprojects.html
+++ b/allprojects.html
@@ -105,7 +105,7 @@
                     <header class="major" style="margin-bottom:0px;">
                         <h1 style="line-height:1.25;">All Projects</h1>
                     </header>
-                    <p style="margin-top:-10px;margin-bottom:0px;">The ICSS has <span id="projCount">[YYY]</span> projects, with <span id="leadCount">[zzz]</span> student leads, involving <span id="studentCount">[xxx]</span> undergraduate researchers and <span id="gradCount">[mmm]</span> current Ph.D. students.  <span id="gradUnder">[OOO]</span> undergraduate and <span id="gradPhD">[aaa]</span> graduate students have moved on to exciting new careers!</p>
+                    <p style="margin-top:-10px;margin-bottom:0px;">The ICSS has <span id="projCount">[YYY]</span> projects, with <span id="leadCount">[zzz]</span> student leads, involving <span id="studentCount">[xxx]</span> undergraduate researchers and <span id="gradCount">[mmm]</span> current Ph.D. students.  <span id="gradUnder">[OOO]</span> undergraduate and <span id="gradPhD">[aaa]</span> graduate students have moved on to exciting new careers!  Are you W&M Faculty or an external collaborator, and you want to work with some of the brightest students in the world to change the world?  Submit your idea <a href="https://forms.gle/foj1a5QXvFj8r4yK8">here</a>, and we'll make it happen.</p>
                         
                     <div class="button-group filter-button-group fit small primary" >
                         <button class="button primary small" data-filter="*" style="margin-bottom:10px;">All</button>
