--- a/disrupting.html
+++ b/disrupting.html
@@ -22,7 +22,7 @@
 
         <!-- Header -->
         <header id="header">
-            <a href="index.html" class="logo"><strong>ICSS</strong> <span>@ William and Mary</span></a>
+            <a href="index.html" class="logo"><strong>ICSS</strong> <span>@ William & Mary</span></a>
             <nav>
                 <a href="#menu">Menu</a>
             </nav>
