--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>ICSS</strong> <span>@ William and Mary</span></a>
+						<a href="index.html" class="logo"><strong>ICSS</strong> <span>@ William & Mary</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
